--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.29.3",
     "formik": "^2.2.9",
+    "freerasp-react-native": "^3.8.1",
     "i18n-js": "^4.2.3",
     "install": "^0.13.0",
     "jail-monkey": "^2.8.0",
@@ -92,18 +93,18 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
-    "prettier": "^2.4.1",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-plugin-transform-remove-console": "^6.9.4",
     "obfuscator-io-metro-plugin": "^2.1.3",
     "patch-package": "^7.0.0",
+    "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "react-test-renderer": "18.2.0",
+    "typescript": "4.8.4"
   },
   "jest": {
     "preset": "react-native"
