--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package",
+    "android-uat-debug-apk": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && cd android/ && APP_ENV=staging ./gradlew assembleDebug && cd ..",
+    "android-uat-release-apk": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release/ && rm -rf android/app/src/main/res/drawable-* && rm -rf android/app/src/main/res/raw/* && cd android && ./gradlew clean && APP_ENV=development ./gradlew app:assembleRelease && cd ..",
+    "android-release-apk": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release/ && rm -rf android/app/src/main/res/drawable-* && rm -rf android/app/src/main/res/raw/* && cd android && ./gradlew clean && APP_ENV=production ./gradlew app:assembleRelease && cd ..",
+    "android-release-aab": "rm -rf android/app/src/main/res/drawable-* && rm -rf android/app/src/main/res/raw/* && cd android && ./gradlew clean && APP_ENV=production ./gradlew bundleRelease && cd .."
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^4.4.5",
