--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "babel-plugin-module-resolver": "^5.0.0",
@@ -106,7 +107,7 @@
     "obfuscator-io-metro-plugin": "^2.1.3",
     "patch-package": "^7.0.0",
     "prettier": "^2.4.1",
-    "react-native-dotenv": "^3.4.9",
+    "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
