--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,4 @@
+apply plugin: 'kotlin-android'
 apply plugin: "com.android.application"
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
@@ -158,7 +159,7 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion" 
      // Import the Firebase BoM
 //    implementation platform('com.google.firebase:firebase-bom:32.2.2')
     // TODO: Add the dependencies for Firebase products you want to use
@@ -171,6 +172,7 @@ dependencies {
 //    }
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
+    implementation 'com.securevale:rasp-android:0.6.0'
 
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
